attempt to move to jdk9 - not successful yet